--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-course-navigator></app-course-navigator>
+<div style="margin: 15px;">
+  <h1 style="color: #007bff">WhiteBoard</h1>
+  <!--<h4 style="color: orangered">Courses [{{courses.length}}] </h4>-->
+  <hr/>
+  <app-course-navigator></app-course-navigator>
+</div>
