--- a/src/app/course-navigator/course-navigator.component.css
+++ b/src/app/course-navigator/course-navigator.component.css
@@ -1,6 +1,34 @@
-.list-group-item.active.webdev {
+.list-group-item.active.course {
   z-index: 2;
   color: #fff;
   background-color: rgba(0,168,255,0.9);
   border-color: rgba(0,168,255,0.9);
+}
+
+.list-group-item.active.module {
+  z-index: 2;
+  color: #fff;
+  background-color: rgba(240,168,205,0.9);
+  border-color: rgba(240,168,205,0.9);
+}
+
+.list-group-item.active.lesson {
+  z-index: 2;
+  color: #fff;
+  background-color: rgba(20,240,160,0.7);
+  border-color: rgba(20,240,160,0.7);
+}
+
+.list-group-item.active.topic {
+  z-index: 2;
+  color: #fff;
+  background-color: rgba(90,240,20,0.9);
+  border-color: rgba(90,240,20,0.9);
+}
+
+.list-group-item.active.widget {
+  z-index: 2;
+  color: #fff;
+  background-color: rgba(245,155,20,0.9);
+  border-color: rgba(245,155,20,0.9);
 }
