added module list, lesson tabs and topic pills

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-white-board></app-white-board>
+<router-outlet></router-outlet>
+<!--<app-white-board></app-white-board>-->
 <!--<app-course-navigator></app-course-navigator>-->
 
 
