--- a/src/app/white-board/white-board.component.html
+++ b/src/app/white-board/white-board.component.html
@@ -1,6 +1,7 @@
 <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
 <nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;">
   <!--<a class="navbar-brand" href="#">White-Board</a>-->
+  <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -20,11 +21,8 @@
 </nav>
 
 <div style="margin: 5px; padding: 15px;">
-  <h1 style="color: #007bff">WhiteBoard</h1>
-  <hr/>
-  <p>
-    white-board works ... !
-  </p>
+  <app-course-grid></app-course-grid>
+  <!--<h1 style="color: #007bff">WhiteBoard</h1>-->
 </div>
 
 
