--- a/src/app/course-viewer/course-viewer.component.html
+++ b/src/app/course-viewer/course-viewer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="mr-1 ml-1 mt-0 p-3">
   <h2 style="color: #0069d9;">{{course.title}}</h2>
   <app-module-list></app-module-list>
 </div>
