--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,66 @@
-<p>
-  login works!
-</p>
+<nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;">
+  <!--<a class="navbar-brand" href="#">White-Board</a>-->
+  <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </li>
+      <!--<li class="nav-item">-->
+      <!--<a class="nav-link" routerLink="/login">Login</a>-->
+      <!--</li>-->
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/register">Register</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div style="margin: 5px; padding: 15px;">
+    <h2 style="color: #0069d9;">Login</h2>
+    <br>
+
+      <form>
+        <div class="form-group row">
+          <label for="usernameFld" class="col-sm-2 col-form-label text-center">
+            Username </label>
+          <div class="col-sm-10">
+            <input [(ngModel)]="username"
+                   class="form-control"
+                   id="usernameFld"
+                   placeholder="Alice">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="passwordFld" class="col-sm-2 text-center col-form-label">
+            Password </label>
+          <div class="col-sm-10">
+            <input [(ngModel)]="password"
+                   id="passwordFld"
+                   class="form-control wbdv-password-fld"
+                   placeholder="password">
+          </div>
+        </div>
+        <div class="form-group row align-content-center">
+          <div class="col-sm-12">
+            <button (click)="login(username, password)"
+                    id="loginBtn" class="btn btn-primary btn-block">
+              Login
+            </button>
+            <button id="resetBtn" class="btn btn-secondary btn-block">
+              <!--(click)="reset(username, password)"-->
+              Reset
+            </button>
+
+          </div>
+        </div>
+      </form>
+    </div>
+
+  <!--<a class="btn btn-outline-primary" routerLink="/register">Register</a>-->
+  <!--&nbsp; &nbsp; &nbsp; &nbsp;-->
+  <!--<a class="btn btn-outline-primary" routerLink="/home">Home</a>-->
