--- a/src/app/white-board/white-board.component.html
+++ b/src/app/white-board/white-board.component.html
@@ -8,13 +8,13 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" routerLink="/home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
+        <a class="nav-link" routerLink="/login">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Register</a>
+        <a class="nav-link" routerLink="/register">Register</a>
       </li>
     </ul>
   </div>
