--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,56 @@
-<p>
-  profile works!
-</p>
+<nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;">
+  <!--<a class="navbar-brand" href="#">White-Board</a>-->
+  <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </li>
+      <!--<li class="nav-item">-->
+      <!--<a class="nav-link" routerLink="/login">Login</a>-->
+      <!--</li>-->
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/register">Register</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div style="margin: 5px; padding: 15px;">
+  <h2 style="color: #0069d9;">Profile</h2>
+  <br>
+
+  <input [(ngModel)]="username"
+         placeholder="username"
+         class="form-control"/>
+  <input [(ngModel)]="firstName"
+         placeholder="first name"
+         class="form-control"/>
+  <input [(ngModel)]="lastName"
+         placeholder="lastName"
+         class="form-control"/>
+  <input [(ngModel)]="email"
+         placeholder="email"
+         class="form-control"/>
+  <button (click)="update()"
+          class="btn btn-primary btn-block">
+    Update
+  </button>
+
+  <!--<h2>Sections ({{sections.length}})</h2>-->
+
+  <!--<ul class="list-group">-->
+    <!--<li *ngFor="let enrollment of sections" class="list-group-item">-->
+      <!--{{enrollment.section.name}}-->
+      <!--({{enrollment.section.seats}})-->
+    <!--</li>-->
+  <!--</ul>-->
+
+  <a (click)="logout()">Logout</a>
+  <a routerLink="/home">Home</a>
+
+</div>
