--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,6 +30,7 @@
             Username </label>
           <div class="col-sm-10">
             <input [(ngModel)]="username"
+                   [ngModelOptions]="{standalone: true}"
                    class="form-control"
                    id="usernameFld"
                    placeholder="Alice">
@@ -40,6 +41,7 @@
             Password </label>
           <div class="col-sm-10">
             <input [(ngModel)]="password"
+                   [ngModelOptions]="{standalone: true}"
                    id="passwordFld"
                    class="form-control wbdv-password-fld"
                    placeholder="password">
