--- a/src/app/course-grid/course-grid.component.html
+++ b/src/app/course-grid/course-grid.component.html
@@ -1,4 +1,4 @@
-<h2 style="color: #0069d9;">Course Grid ({{courses.length}})</h2>
+<h2 style="color: #0069d9;">All Courses ({{courses.length}})</h2>
 <!--<br/>-->
 <div class="row pt-3" >
   <div *ngFor="let course of courses" class="col-sm-3 ">
