--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
                    [ngModelOptions]="{standalone: true}"
                    class="form-control"
                    id="usernameFld"
-                   placeholder="Alice">
+                   placeholder="username">
           </div>
         </div>
         <div class="form-group row">
