--- a/src/app/white-board/white-board.component.html
+++ b/src/app/white-board/white-board.component.html
@@ -1,12 +1,13 @@
 <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-<nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-md  navbar-light" style="background-color: #e3f2fd;">
   <!--<a class="navbar-brand" href="#">White-Board</a>-->
   <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
@@ -16,11 +17,38 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/register">Register</a>
       </li>
+      <!--<form class="form-inline mt-2 mt-md-0">-->
+      <!--<span class="navbar-text">-->
+      <!--Logged in as : </span>-->
+      <!--<span style="color: dimgrey; font-weight: bold">&nbsp;{{username}}-->
+      <!--</span>-->
+      <!--&nbsp;&nbsp;-->
+      <!--<button class="btn btn-outline-primary my-2 my-sm-0"-->
+      <!--(click)="logout()">Logout</button>-->
+      <!--</form>-->
     </ul>
+    <form class="form-inline mt-2 mt-md-0">
+      <span class="navbar-text">
+      Logged in as : </span>
+      <span style="color: dimgrey; font-weight: bold">&nbsp;{{username}}
+      </span>
+
+      <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"
+              routerLink="/login">&nbsp;Login&nbsp;
+      </button>
+
+      <button class="btn btn-outline-primary my-2 my-sm-0"
+              routerLink="/register">Register
+      </button>
+    </form>
+
+
   </div>
 </nav>
 
 <div style="margin: 5px; padding: 15px;">
+  <app-enrolled-courses></app-enrolled-courses>
+  <hr/>
   <app-course-grid></app-course-grid>
   <!--<h1 style="color: #007bff">WhiteBoard</h1>-->
 </div>
