--- a/src/app/section-list/section-list.component.html
+++ b/src/app/section-list/section-list.component.html
@@ -1,29 +1,42 @@
-<nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">
   <!--<a class="navbar-brand" href="#">White-Board</a>-->
   <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/login">Login</a>
+      <li class="nav-item" [hidden] = !loggedIn>
+        <a class="nav-link" routerLink="/profile">Profile</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/register">Register</a>
+      <li class="nav-item" [hidden] = !loggedIn>
+        <a class="nav-link" [hidden] = !admin
+           routerLink="/admin">Admin</a>
       </li>
     </ul>
+    <!--<form class="form-inline my-2 my-lg-0">-->
+    <form class="form-inline mt-2 mt-md-0">
+      <span class="navbar-text">
+        Logged in as : </span>
+      <span style="color: dimgrey; font-weight: bold">&nbsp;{{username}}
+      </span>
+      &nbsp;&nbsp;
+      <button class="btn btn-outline-primary my-2 my-sm-0"
+              (click)="logout()">Logout</button>
+    </form>
   </div>
 </nav>
 
 <div style="margin: 5px; padding: 15px;">
   <h2 style="color: darkorange">Sections for course: {{courseId}}</h2>
-
+  <h3  [hidden] = !updateMode class="text-center" style="color: limegreen">Edit this section{{courseId}}</h3>
+  <div [hidden] = !admin>
   <br>
-  <form [hidden] = !admin>
+  <form>
 
     <div class="form-group row">
       <label for="sectionFld" class="col-sm-2 text-center col-form-label">
@@ -49,15 +62,38 @@
       </div>
     </div>
     <button id="createBtn"
+            [hidden] = updateMode
             (click)="createSection(sectionName, seats)"
             class="btn"
             style="margin-left:2%; width: 98%; color: white; background-color: orange">
       Add Section
     </button>
+
+    <button id="updateBtn"
+            [hidden] = !updateMode
+            (click)="updateSection(sectionName, seats)"
+            class="btn btn-success"
+            style="margin-left:2%; width: 98%;">
+      Update Section
+    </button>
   </form>
+<br/>
+    <ul class="list-group rounded py-1 my-1" style="width: 36rem">
+      <li *ngFor="let section of sections" class="list-group-item shadow bg-light">
+        <span style="font-size: large; color:dodgerblue;"> </span>{{section.name}}
+        <button (click)="deleteSection(section)"
+                class="float-right btn btn-outline-danger float-right mt-2">
+          <i class="fas fa-trash-alt"></i></button>
+        <button (click)="editSection(section)"
+                class="float-right btn btn-outline-success float-right mt-2 mr-2">
+          <i class="fas fa-pencil-alt"></i></button>
+        <br> <span style="color: dimgrey; font-style: italic "> Seats Available :  </span>
+        {{section.seats}}
+      </li>
+    </ul>
 
-<br>
-
+  </div>
+<div [hidden] = admin>
   <ul class="list-group rounded py-1 my-1" style="width: 36rem">
     <li *ngFor="let section of sections" class="list-group-item shadow bg-light">
       <span style="font-size: large; color:dodgerblue;"> </span>{{section.name}}
@@ -67,5 +103,7 @@
       {{section.seats}}
     </li>
   </ul>
+</div>
+
 
 </div>
