--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,23 @@
-<nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;">
-  <!--<a class="navbar-brand" href="#">White-Board</a>-->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
-      <!--<li class="nav-item">-->
-      <!--<a class="nav-link" routerLink="/login">Login</a>-->
-      <!--</li>-->
       <li class="nav-item">
         <a class="nav-link" routerLink="/register">Register</a>
       </li>
     </ul>
   </div>
 </nav>
+
+
+
 
 <div style="margin: 5px; padding: 15px;">
     <h2 style="color: #0069d9;">Login</h2>
@@ -54,9 +53,10 @@
                     style="margin-left:3%; width: 97%;">
               Login
             </button>
-            <button id="resetBtn" class="btn btn-secondary btn-block"
+            <button (click)="reset(username, password)"
+              id="resetBtn" class="btn btn-secondary btn-block"
                     style="margin-left:3%; width: 97%;">
-              <!--(click)="reset(username, password)"-->
+
               Reset
             </button>
 
