--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,109 +1,138 @@
-<nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">
-  <!--<a class="navbar-brand" href="#">White-Board</a>-->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
-      <li class="nav-item" [hidden] = !loggedIn>
+      <li class="nav-item active disabled" [hidden]=!loggedIn>
         <a class="nav-link" routerLink="/profile">Profile</a>
       </li>
-      <li class="nav-item" [hidden] = !loggedIn>
-        <a class="nav-link" [hidden] = !admin
+      <li class="nav-item" [hidden]=!loggedIn>
+        <a class="nav-link" [hidden]=!admin
            routerLink="/admin">Admin</a>
       </li>
     </ul>
     <!--<form class="form-inline my-2 my-lg-0">-->
-      <form class="form-inline mt-2 mt-md-0">
+    <form [hidden]=!loggedIn
+          class="form-inline mt-2 mt-md-0">
       <span class="navbar-text">
         Logged in as : </span>
-        <span style="color: dimgrey; font-weight: bold">&nbsp;{{username}}
+      <span style="color: dimgrey; font-weight: bold">&nbsp;{{username}}
       </span>
       &nbsp;&nbsp;
       <button class="btn btn-outline-primary my-2 my-sm-0"
-              (click)="logout()">Logout</button>
+              (click)="logout()">Logout
+      </button>
+    </form>
+
+    <form [hidden]=loggedIn
+          class="form-inline mt-2 mt-md-0">
+
+      <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"
+              routerLink="/login">&nbsp;Login&nbsp;
+      </button>
+
+      <button class="btn btn-outline-primary my-2 my-sm-0"
+              routerLink="/register">Register
+      </button>
     </form>
   </div>
 </nav>
 
 
-
 <div style="margin: 5px; padding: 15px;">
   <h2 style="color: #0069d9;">Profile</h2>
-  <br>
-
-  <form>
-    <div class="form-group row">
-      <label for="inputUserName" class="col-form-label ml-5 px-2" style="width: 12%">User Name</label>
-      <div class="col-sm-10">
-        <input [(ngModel)]="username" [ngModelOptions]="{standalone: true}"
-          type="text" class="form-control" id="inputUserName" placeholder="Username" value="" >
+  <div [hidden]=!loggedIn>
+    <br>
+    <form>
+      <div class="form-group row">
+        <label for="inputUserName" class="col-form-label ml-5 px-2" style="width: 12%">User Name</label>
+        <div class="col-sm-10">
+          <input [(ngModel)]="username" [ngModelOptions]="{standalone: true}"
+                 type="text" class="form-control" id="inputUserName" placeholder="Username" value="">
+        </div>
       </div>
+
+      <div class="form-group row ">
+        <label for="inputFirstName" class="col-form-label ml-5 px-2" style="width: 12%">First Name</label>
+        <div class="col-sm-10">
+          <input [(ngModel)]="firstName" [ngModelOptions]="{standalone: true}"
+                 type="text" class="form-control" id="inputFirstName" placeholder="Firstname" value="">
+        </div>
+      </div>
+
+      <div class="form-group row ">
+        <label for="inputLastName" class="col-form-label ml-5 px-2" style="width: 12%">Last Name</label>
+        <div class="col-sm-10">
+          <input [(ngModel)]="lastName" [ngModelOptions]="{standalone: true}"
+                 type="text" class="form-control" id="inputLastName" placeholder="Lastname" value="">
+        </div>
+      </div>
+
+
+      <div class="form-group row">
+        <label for="inputPhone" class="col-form-label ml-5 px-2" style="width: 12%">Phone Number</label>
+        <div class="col-sm-10">
+          <input [(ngModel)]="phone" [ngModelOptions]="{standalone: true}"
+                 type="text" class="form-control" id="inputPhone" placeholder="(555) 123-4323" value="">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="inputEmail" class="col-form-label ml-5 px-2" style="width: 12%">Email</label>
+        <div class="col-sm-10">
+          <input [(ngModel)]="email" [ngModelOptions]="{standalone: true}"
+                 type="text" class="form-control" id="inputEmail" placeholder="alice@wonderland.com" value="">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="inputAddress" class="col-form-label ml-5 px-2" style="width: 12%">Address</label>
+        <div class="col-sm-10">
+          <input [(ngModel)]="address" [ngModelOptions]="{standalone: true}"
+                 type="text" class="form-control" id="inputAddress" placeholder="address" value="">
+        </div>
+      </div>
+
+      <button (click)="update()"
+              class="btn btn-primary" style="margin-left:4%; width: 96%">
+        Update
+      </button>
+
+    </form>
+
+    <div [hidden]=admin>
+      <hr>
+      <h2 class="ml-lg-4" style="color: mediumblue;">Sections Enrolled in : {{sections.length}}</h2>
+      <ul class="list-group ml-lg-2">
+        <li *ngFor="let enrollment of sections" class="list-group-item my-1 rounded bg-light shadow-sm col-md-8">
+          <div class="row">
+            <div class="col-4 border-right my-0">
+              <b>{{enrollment.section.name}}</b>
+            </div>
+            <div class="col-4 pl-4">
+              <span style="color: dimgrey;">
+                <i> Course : {{getCourseName(enrollment.section.courseId)}}</i>
+              </span>
+          </div>
+            <div class="col-4 pl-4">
+              <button (click)="dropSection(section)"
+                      class="float-right btn btn-outline-danger mr-2">
+                <i class="fas fa-times"></i>&nbsp;&nbsp;Un Enroll</button>
+            </div>
+          </div>
+        </li>
+      </ul>
+
     </div>
 
-    <div class="form-group row ">
-      <label for="inputFirstName" class="col-form-label ml-5 px-2" style="width: 12%">First Name</label>
-      <div class="col-sm-10">
-        <input [(ngModel)]="firstName" [ngModelOptions]="{standalone: true}"
-          type="text" class="form-control" id="inputFirstName" placeholder="Firstname" value="">
-      </div>
-    </div>
 
-    <div class="form-group row ">
-      <label for="inputLastName" class="col-form-label ml-5 px-2" style="width: 12%">Last Name</label>
-      <div class="col-sm-10">
-        <input [(ngModel)]="lastName" [ngModelOptions]="{standalone: true}"
-          type="text" class="form-control" id="inputLastName" placeholder="Lastname" value="">
-      </div>
-    </div>
+  </div>
 
 
-    <div class="form-group row">
-      <label for="inputPhone" class="col-form-label ml-5 px-2" style="width: 12%">Phone Number</label>
-      <div class="col-sm-10">
-        <input [(ngModel)]="phone" [ngModelOptions]="{standalone: true}"
-          type="text" class="form-control" id="inputPhone" placeholder="(555) 123-4323" value="">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="inputEmail" class="col-form-label ml-5 px-2" style="width: 12%">Email</label>
-      <div class="col-sm-10">
-        <input [(ngModel)]="email" [ngModelOptions]="{standalone: true}"
-          type="text" class="form-control" id="inputEmail" placeholder="alice@wonderland.com" value="">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="inputAddress" class="col-form-label ml-5 px-2" style="width: 12%">Address</label>
-      <div class="col-sm-10">
-        <input [(ngModel)]="address" [ngModelOptions]="{standalone: true}"
-          type="text" class="form-control" id="inputAddress" placeholder="address" value="">																			<!-- value="1991-12-30" -->
-      </div>
-    </div>
-
-    <button (click)="update()"
-            class="btn btn-primary" style="margin-left:4%; width: 96%">
-      Update
-    </button>
-
-  </form>
-<div [hidden] = admin>
-  <hr>
-    <h2 class="ml-lg-4" style="color: mediumblue;">Sections Enrolled in : {{sections.length}}</h2>
-  <ul class="list-group ml-lg-2">
-    <li *ngFor="let enrollment of sections" class="list-group-item my-1 rounded bg-light shadow-sm col-sm-6">
-      <b>{{enrollment.section.name}}</b>&nbsp;&nbsp;<i>( Course : {{courseDetails(enrollment.section.courseId)}} )</i>
-
-      <!--({{enrollment.section.seats}})-->
-    </li>
-  </ul>
-
-  <!--<a (click)="logout()">Logout</a>-->
-</div>
 </div>
