--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -31,16 +31,44 @@
   </div>
 </nav>
 
-
-
-<br>
 <div style="margin: 5px; padding: 15px;">
-<ul class="list-group rounded py-1 my-1" style="width: 36rem">
-  <li *ngFor="let course of courses" class="list-group-item shadow-sm rounded bg-light my-1">
-    <span style="font-size: large; color:dodgerblue;"> </span>{{course.title}}
-    <button class="float-right btn btn-outline-primary float-right"
-            routerLink="/course/{{course.id}}/section">Show Sections</button>
-      <!--(click)="showSections(section)"-->
-  </li>
-</ul>
+  <div class="row">
+    <div class="col border pr-1">
+      <ul class="list-group rounded py-1 my-1" style="width: 20rem">
+        <li *ngFor="let course of courses"
+            class="list-group-item shadow rounded my-2"
+            (click)="selectCourse(course.id)"
+            [ngClass]="{'active': course.id === selectedCourseId}">
+          <span style="font-size: large; color:dodgerblue;"> </span>{{course.title}}
+          <!--<button class="float-right btn btn-outline-primary float-right"-->
+                  <!--routerLink="/course/{{course.id}}/section">View Sections</button>-->
+          <!--(click)="showSections(section)"-->
+        </li>
+      </ul>
+    </div>
+    <div class="col-7 border">
+      <!--<h3 class="mb-1 text-center" style="color: dimgray;"> Section Editor</h3>-->
+      <div style="padding: 10px;">
+        <h2 style="color: darkorange" class="text-center">Sections {{courseId}}</h2>
+        <h4  [hidden] = !updateMode class="text-center p-0 m-0" style="color: limegreen">Editing this section</h4>
+        <div [hidden] = !admin>
+          <ul class="list-group rounded py-1 my-1" style="width: 36rem">
+            <li *ngFor="let section of sections" class="list-group-item shadow bg-light">
+              <span style="font-size: large; color:dodgerblue;"> </span>{{section.name}}
+              <button (click)="deleteSection(section)"
+                      class="float-right btn btn-outline-danger float-right mt-2">
+                <i class="fas fa-trash-alt"></i></button>
+              <button (click)="editSection(section)"
+                      class="float-right btn btn-outline-success float-right mt-2 mr-2">
+                <i class="fas fa-pencil-alt"></i></button>
+              <br> <span style="color: dimgrey; font-style: italic "> Seats Available :  </span>
+              {{section.seats}}
+            </li>
+          </ul>
+          <br>
+
+        </div>
+    </div>
+  </div>
+
 </div>
