--- a/src/app/white-board/white-board.component.html
+++ b/src/app/white-board/white-board.component.html
@@ -1,13 +1,11 @@
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-<nav class="navbar navbar-expand-md  navbar-light" style="background-color: #e3f2fd;">
-  <!--<a class="navbar-brand" href="#">White-Board</a>-->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
